fix(groupbuy): prevent duplicate items in 'ending_soon' pagination by excluding current cursor (#126) (#232)